[김인규]  - 문제추가및 강의 자료 업데이트

--- a/front/04_bootstrap/ex/ex02/style.css
+++ b/front/04_bootstrap/ex/ex02/style.css
@@ -10,5 +10,6 @@ nav {height:50px;}
 
 footer {height:100px;}
 
-a {text-decoration: none; }
-a:hover {text-decoration: none !important;}
+
+.main-link {color:black}
+.main-link:hover {color:gray}
